# nixos-config

./: .gitmodules  .sops.yaml  README.md  flake.nix  installer.sh  todo.md
.defaults/: hyprlock.nix.~1~  sddm.bak.nix  sddm.nix
.defaults/display-manager/: sddm.nix.bak~
assets/.bak/: __sddm.nix  _sddm.nix
assets/hyprspace-patch/: compile_commands.json
devenv/zig/: devenv.nix  devenv.yaml
hosts/lenovo-blue/: config.nix  default.nix  hardware-configuration.nix
hosts/rock-grey/: config.nix  default.nix  hardware-configuration.nix
modules/core/: default.nix  fcitx5.nix  mpd.nix  packages.nix  pipewire.nix  silent-sddm.nix  system.nix  user.nix  wayland.nix
modules/profiles/lang-tools/Hanzi2Pinyin/: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
modules/profiles/lang-tools/Hanzi2Pinyin/addon/: __init__.py  bulk_add.py  config.json  tasks.py
modules/profiles/lang-tools/Hanzi2Pinyin/addon/components/: ruby_button.py  ruby_processor.py
modules/profiles/lang-tools/Hanzi2Pinyin/addon/components/processors/: __init__.py  base_processor.py  zhuyin_processor.py
modules/profiles/lang-tools/Hanzi2Pinyin/addon/utils/: __init__.py  dependencies.py  unimplemented.py  versions.py
modules/profiles/lang-tools/Hanzi2Pinyin/docs/: development.md  quick_start_guide.md
modules/profiles/lang-tools/Hanzi2Pinyin/docs/ankiweb/: description.md  upload_data.md
modules/profiles/lang-tools/Hanzi2Pinyin/tests/: test_pinyin_processor.py  test_zhuyin_processor.py
roles/: _nvidia.nix  amd.nix  default.nix
secrets/: secrets.yaml
(+331 files in other folders)
